feat: migrate message pipeline to protobuf